--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "start": "node main.js"
+    "start": "node main.js",
+    "nyc:report": "nyc report",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run && nyc report"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -14,10 +17,27 @@
     "vue": "^3.4.15"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.12.22",
+    "@types/node": "^20.11.17",
     "@vitejs/plugin-vue": "^5.0.3",
+    "cypress": "^13.6.4",
+    "nyc": "^15.1.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
     "vite-plugin-istanbul": "^5.0.0",
     "vue-tsc": "^1.8.27"
+  },
+  "nyc": {
+    "all": true,
+    "extension": [
+      ".js",
+      ".ts",
+      ".vue"
+    ],
+    "include": [
+      "src/**/*.js",
+      "src/**/*.ts",
+      "src/**/*.vue"
+    ]
   }
 }
